--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
     <!-- Theme applied to the Android Window while the process is starting -->
     <style name="LaunchTheme" parent="@android:style/Theme.Black.NoTitleBar">
-        <item name="android:windowBackground">@drawable/normal_background</item>
+        <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
 
     <!-- Theme applied to the Android Window as soon as the process has started.
@@ -12,8 +12,7 @@
          
          This Theme is only used starting with V2 of Flutter's Android embedding. -->
     <style name="NormalTheme" parent="@android:style/Theme.Black.NoTitleBar">
-        <item name="android:windowBackground">@drawable/launch_background</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
 </resources>
